--- a/cookiepopup/dark-bottom.css
+++ b/cookiepopup/dark-bottom.css
@@ -1,101 +1,14 @@
+
+.cc_container, .cc_container *, .cc_container div, .cc_container button, .cc_container a
+{
+	all         :initial;
+	color       : #FFFFFF;
+	font-family : "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, serif;
+}
+
 #webhint
 {
 	display: none
-}
-
-.cc_banner-wrapper
-{
-	z-index: 9001;
-	position: relative
-}
-
-.cc_container .cc_btn
-{
-	cursor: pointer;
-	text-align: center;
-	font-size: 0.6em;
-	transition: font-size 200ms;
-	line-height: 1em;
-	float: right;
-}
-
-.cc_container .cc_btn_grp
-{
-	width: 30%;
-	float: right;
-}
-
-.cc_container .cc_message
-{
-	font-size: 0.6em;
-	transition: font-size 200ms;
-	line-height: 1.5em;
-	text-align: left;
-	width: 45%;
-}
-
-.cc_container .cc_logo
-{
-	display: none;
-	text-indent: -1000px;
-	overflow: hidden;
-	width: 100px;
-	height: 22px;
-	background-size: cover;
-	background-image: url(https://s3-eu-west-1.amazonaws.com/assets.cookieconsent.silktide.com/cookie-consent-logo.png);
-	opacity: 0.9;
-	transition: opacity 200ms
-}
-
-.cc_container .cc_message .cc_text
-{
-	float: left;
-}
-
-.cc_container .cc_logo:hover,.cc_container .cc_logo:active
-{
-	opacity: 1
-}
-
-@media screen and (min-width: 500px)
-{
-	.cc_container .cc_btn {
-		font-size:0.8em
-	}
-
-	.cc_container .cc_message
-	{
-		font-size: 0.8em
-	}
-}
-
-@media screen and (min-width: 768px)
-{
-	.cc_container .cc_btn
-	{
-		font-size:1em
-	}
-
-	.cc_container .cc_message
-	{
-		font-size: 1em;
-		line-height: 1em
-	}
-}
-
-@media screen and (min-width: 992px)
-{
-	.cc_container .cc_message
-	{
-		font-size:1em
-	}
-}
-
-@media print
-{
-	.cc_banner-wrapper,.cc_container {
-		display: none
-	}
 }
 
 .cc_container
@@ -107,6 +20,11 @@
 	overflow: hidden;
 	padding: 10px !important;
 	text-align: center;
+	line-height: 1.5;
+	background: #222;
+	color: #fff;
+	font-size: 14px;
+	box-sizing: border-box;
 }
 
 .cc_container .cc_btn
@@ -115,80 +33,110 @@
 	cursor: pointer;
 	transition: font-size 200ms;
 	text-align: center;
-	font-size: 0.6em;
+	font-size: 1.5em;
 	display: inline-block;
 	margin-left: 10px !important;
-	margin-top: 10px !important;
+	line-height: 1em;
+	float: right;
+}
+
+.cc_container .cc_btn
+{
+	width: 100%;
 }
 
 .cc_container .cc_message
 {
-	transition: font-size 200ms;
-	font-size: 0.6em;
 	display: inline-block;
 	float: left;
-
-}
-
-.cc_container .cc_list .cc_left
-{
-	float: left;
-	padding-right: 30px;
+	line-height: 1.5em;
+	text-align: left;
+	width: 40%;
 }
 
 .cc_container .cc_list
 {
-	text-align: left;
+	text-align: center;
 	display: inline-block;
-	width: 20%;
-	padding-left: 5%;
-	margin-top: 10px;
-	font-family: "Helvetica Neue Light","HelveticaNeue-Light","Helvetica Neue",Calibri,Helvetica,Arial;
-	font-size:1em;
+	margin-left: 30px;
+	margin-top: 20px;
+	font-size: 10px;
+	width: 30%;
 }
 
-.cc_container .cc_list td
+.cc_banner-wrapper
 {
-	color: white !important;
-	font-family      : "Helvetica Neue Light","HelveticaNeue-Light","Helvetica Neue",Calibri,Helvetica,Arial;
-	font-size        : 1em;
+	z-index: 9001;
+	position: relative
 }
 
-@media screen and (max-width: 425px){
-	.cc_container a.cc_btn
-	{
-		font-size: 1em;
-		font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
-	}
+.cc_container .cc_btn_grp
+{
+	width: 20%;
+	display: inline-block;
+	float: right;
+	margin: 10px 0;
+}
 
-	.cc_container .cc_list td, .cc_container .cc_more_info, .cc_container .cc_btn_only_essential
-	{
-		font-family      : "Helvetica Neue Light","HelveticaNeue-Light","Helvetica Neue",Calibri,Helvetica,Arial;
-		font-size        : 0.8em;
-	}
+.cc_container .cc_list
+{
+	display: table;
+	padding: 0;
+	margin: 0;
+}
 
-	.cc_container .cc_list td
-	{
-		display: block;
-	}
+.cc_container .cc_list .cc_cell
+{
+	display: table-row;
+	vertical-align: inherit;
+}
 
-	.cc_container .cc_list .cc_left
-	{
-		padding-right: 0;
-	}
+.cc_container .cc_list .cc_row
+{
+	display: table-row;
+	vertical-align: inherit;
+}
+
+.cc_container .cc_logo:hover,.cc_container .cc_logo:active
+{
+	opacity : 1
 }
 
 @media screen and (min-width: 500px)
 {
+
+	.cc_container .cc_list
+	{
+		display: inline-block;
+		margin: 0;
+		padding-right: 30%;
+		position: absolute;
+		top: 50%;
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+		font-size: 8px;
+	}
+
 	.cc_container .cc_btn
 	{
-		font-size:0.8em
+		font-size:1.2em
 	}
 
 	.cc_container .cc_message
 	{
-		margin-top: 0.5em;
-		font-size: 0.8em
+		padding: 3px;
+		font-size : 12px;
+		margin    : auto;
+		line-height:1.2;
+		position  : absolute;
+		top: 50%;
+		-ms-transform: translateY(-50%) translateX(-120%);
+		transform: translateY(-50%) translateX(-120%);
+	}
+
+	.cc_container .cc_more_info
+	{
+		font-size: 12px;
 	}
 
 }
@@ -200,6 +148,11 @@
 		display:block
 	}
 
+	.cc_container .cc_list .cc_cell
+	{
+		display: table-cell;
+		padding-left: 5px;
+	}
 
 	.cc_container .cc_btn
 	{
@@ -207,33 +160,38 @@
 		padding: 8px 10px;
 	}
 
-	.cc_container a
-	{
-		font-family: "Helvetica Neue Light","HelveticaNeue-Light","Helvetica Neue",Calibri,Helvetica,Arial !important;
-		font-size: 1em !important;
-	}
-
 	.cc_container .cc_message
 	{
-		font-size: 1em;
+		font-size: 13px;
+		line-height: 1
+	}
+
+	.cc_container .cc_more_info
+	{
+		font-size: 13px;
 	}
 }
 
 @media screen and (min-width: 992px)
 {
+
 	.cc_container .cc_message
 	{
-		font-size:1em
+		font-size:14px;
 	}
+
+	.cc_container .cc_more_info
+	{
+		font-size:14px;
+	}
+
 }
 
-.cc_container
+@media print
 {
-	background: #222;
-	color: #fff;
-	font-size: 14px;
-	font-family: "Helvetica Neue Light","HelveticaNeue-Light","Helvetica Neue",Calibri,Helvetica,Arial;
-	box-sizing: border-box
+	.cc_banner-wrapper,.cc_container {
+		display: none
+	}
 }
 
 .cc_container ::-moz-selection
@@ -267,7 +225,6 @@
 	-webkit-transition: background 200ms ease-in-out,color 200ms ease-in-out,box-shadow 200ms ease-in-out;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
-	font-size: 0.6em;
 	margin-top: 10px;
 }
 
