Cookiemeldung CSS responsive

--- a/cookiepopup/dark-bottom.css
+++ b/cookiepopup/dark-bottom.css
@@ -102,6 +102,24 @@
 	opacity : 1
 }
 
+@media screen and (min-width : 320px)
+{
+	.cc_container .cc_btn
+	{
+		font-size: 0.9em;
+	}
+
+	.cc_container .cc_message
+	{
+		font-size: 0.8em;
+	}
+
+	.cc_container .cc_list .cc_cell
+	{
+		font-size: 0.8em;
+	}
+}
+
 @media screen and (min-width : 500px)
 {
 
